logs-mustafaamer97-rxshield-main-app.py-2026-07-20T21_37_17.370Z.txt

[     UTC     ] Logs for rxshield-ddi.streamlit.app/
────────────────────────────────────────────────────────────────────────────────────────
[21:20:16] 🚀 Starting up repository: 'rxshield', branch: 'main', main module: 'app.py'
[21:20:16] 🐙 Cloning repository...
[21:20:17] 🐙 Cloning into '/mount/src/rxshield'...

[21:20:17] 🐙 Cloned repository!
[21:20:17] 🐙 Pulling code changes from Github...
[21:20:17] 📦 Processing dependencies...

──────────────────────────────────────── uv ───────────────────────────────────────────

Using uv pip install.
Using Python 3.14.6 environment at /home/adminuser/venv
Resolved 45 packages in 468ms
Prepared 45 packages in 1.65s
Installed 45 packages in 99ms
 + altair==6.2.2
 + anyio==4.14.2
 + attrs==26.1.0[2026-07-20 21:20:20.036195] 
 + blinker==1.9.0
 + cachetools==7.1.4
 + certifi==2026.6.17
 + charset-normalizer==3.4.9
 + click==8.4.2
 + et-xmlfile==2.0.0
 + gitdb==4.0.12
 [2026-07-20 21:20:20.036538] + gitpython==3.1.53
 + h11==0.16.0
 + httptools==0.8.0
 + idna==3.18[2026-07-20 21:20:20.036700] 
 + itsdangerous==2.2.0
 + jinja2==3.1.6
 + jsonschema==[2026-07-20 21:20:20.036883] 4.26.0
 + jsonschema-specifications==2025.9.1
 + lxml==6.1.1
 + [2026-07-20 21:20:20.037035] markupsafe==3.0.3
 + narwhals==2.24.0
 + numpy==[2026-07-20 21:20:20.037181] 2.5.1
 + openpyxl==3.1.5
 +[2026-07-20 21:20:20.037301]  packaging==26.2
 + pandas==3.0.3[2026-07-20 21:20:20.037530] 
 + pillow==12.3.0
 + protobuf[2026-07-20 21:20:20.037629] ==7.35.1
 + pyarrow==24.0.0[2026-07-20 21:20:20.037748] 
 + pydeck==0.9.3
 + [2026-07-20 21:20:20.037898] python-dateutil==2.9.0.post0
 + python-multipart==0.0.32[2026-07-20 21:20:20.038022] 
 + referencing==0.37.0
 [2026-07-20 21:20:20.038119] + requests==2.34.2
 + rpds-py[2026-07-20 21:20:20.038231] ==2026.6.3
 + six==1.17.0[2026-07-20 21:20:20.038322] 
 + smmap==5.0.3
 + [2026-07-20 21:20:20.038391] starlette==1.3.1
 + streamlit==[2026-07-20 21:20:20.038486] 1.59.2
 + tenacity==9.1.4
 [2026-07-20 21:20:20.038571] + toml==0.10.2
 + typing-extensions==[2026-07-20 21:20:20.038638] 4.16.0
 + urllib3==2.7.0
 [2026-07-20 21:20:20.038704] + uvicorn==0.51.0
 + watchdog[2026-07-20 21:20:20.038773] ==6.0.0
 + websockets==16.1.1[2026-07-20 21:20:20.038891] 
Checking if Streamlit is installed
Found Streamlit version 1.59.2 in the environment
Installing rich for an improved exception logging
Using uv pip install.
Using Python 3.14.6 environment at /home/adminuser/venv
Resolved 4 packages in 104ms
Prepared 4 packages in 109ms
Installed 4 packages in 13ms
 +[2026-07-20 21:20:22.405715]  markdown-it-py==4.2.0
 + mdurl==0.1.2
 + pygments==2.20.0
 + rich==15.0.0

────────────────────────────────────────────────────────────────────────────────────────

[21:20:23] 🐍 Python dependencies were installed from /mount/src/rxshield/requirements.txt using uv.
Check if streamlit is installed
Streamlit is already installed
[21:20:24] 📦 Processed dependencies!
2026-07-20 21:20:26.131 Uvicorn server started on :::8501



2026-07-20 21:20:31.292 Script compilation error
Traceback (most recent call last):
  File "/home/adminuser/venv/lib/python3.14/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 659, in _run_script
    code = self._script_cache.get_bytecode(script_path)
  File "/home/adminuser/venv/lib/python3.14/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
  File "/home/adminuser/venv/lib/python3.14/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
  File "/usr/local/lib/python3.14/ast.py", line 46, in parse
    return compile(source, filename, mode, flags,
                   _feature_version=feature_version, optimize=optimize)
  File "/mount/src/rxshield/app.py", line 1
    404 page not found
        ^^^^
SyntaxError: invalid syntax
2026-07-20 21:20:31.320 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
2026-07-20 21:20:45.582 Script compilation error
Traceback (most recent call last):
  File "/home/adminuser/venv/lib/python3.14/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 659, in _run_script
    code = self._script_cache.get_bytecode(script_path)
  File "/home/adminuser/venv/lib/python3.14/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
  File "/home/adminuser/venv/lib/python3.14/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
  File "/usr/local/lib/python3.14/ast.py", line 46, in parse
    return compile(source, filename, mode, flags,
                   _feature_version=feature_version, optimize=optimize)
  File "/mount/src/rxshield/app.py", line 1
    404 page not found
        ^^^^
SyntaxError: invalid syntax
2026-07-20 21:20:45.584 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
2026-07-20 21:21:21.284 Script compilation error
Traceback (most recent call last):
  File "/home/adminuser/venv/lib/python3.14/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 659, in _run_script
    code = self._script_cache.get_bytecode(script_path)
  File "/home/adminuser/venv/lib/python3.14/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
  File "/home/adminuser/venv/lib/python3.14/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
  File "/usr/local/lib/python3.14/ast.py", line 46, in parse
    return compile(source, filename, mode, flags,
                   _feature_version=feature_version, optimize=optimize)
  File "/mount/src/rxshield/app.py", line 1
    404 page not found
        ^^^^
SyntaxError: invalid syntax
2026-07-20 21:21:21.286 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
[21:23:42] 🐙 Pulling code changes from Github...
[21:23:43] 📦 Processing dependencies...
[21:23:43] 📦 Processed dependencies!
[21:23:44] 🔄 Updated app!
2026-07-20 21:25:27.342 Script compilation error
Traceback (most recent call last):
  File "/home/adminuser/venv/lib/python3.14/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 659, in _run_script
    code = self._script_cache.get_bytecode(script_path)
  File "/home/adminuser/venv/lib/python3.14/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
  File "/home/adminuser/venv/lib/python3.14/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
  File "/usr/local/lib/python3.14/ast.py", line 46, in parse
    return compile(source, filename, mode, flags,
                   _feature_version=feature_version, optimize=optimize)
  File "/mount/src/rxshield/app.py", line 1
    404 page not found
        ^^^^
SyntaxError: invalid syntax
2026-07-20 21:25:27.344 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
2026-07-20 21:30:54.993 Script compilation error
Traceback (most recent call last):
  File "/home/adminuser/venv/lib/python3.14/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 659, in _run_script
    code = self._script_cache.get_bytecode(script_path)
  File "/home/adminuser/venv/lib/python3.14/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
  File "/home/adminuser/venv/lib/python3.14/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
  File "/usr/local/lib/python3.14/ast.py", line 46, in parse
    return compile(source, filename, mode, flags,
                   _feature_version=feature_version, optimize=optimize)
  File "/mount/src/rxshield/app.py", line 1
    404 page not found
        ^^^^
SyntaxError: invalid syntax
2026-07-20 21:30:54.995 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
2026-07-20 21:36:30.040 Script compilation error
Traceback (most recent call last):
  File "/home/adminuser/venv/lib/python3.14/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 659, in _run_script
    code = self._script_cache.get_bytecode(script_path)
  File "/home/adminuser/venv/lib/python3.14/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
  File "/home/adminuser/venv/lib/python3.14/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
  File "/usr/local/lib/python3.14/ast.py", line 46, in parse
    return compile(source, filename, mode, flags,
                   _feature_version=feature_version, optimize=optimize)
  File "/mount/src/rxshield/app.py", line 1
    404 page not found
        ^^^^
SyntaxError: invalid syntax
2026-07-20 21:36:30.042 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.